# progOptMet

./: CMakeLists.txt  Core.cs  library.cpp  library.h  main.cpp
Functions/: Function.cs  Math.cs
Functions/Parsers/: MathParser.cs  Result.cs
Methods/: CheckingCriterion.cs  Composer.cs  Composite.cs  EmptyMethod.cs  Method.cs  SearchEndingCriterion.cs
Methods/LinearSearch/: Bolzano.cs  CubicInterpolation.cs  Davidon.cs  Dichotomy.cs  Fibonacci2.cs  GoldenSection1.cs  LinSearch.cs  Powell.cs  Swenn.cs
Methods/MethodsGradientDescent/: GaussSeidel.cs  Koshi.cs  MethodСonjugateGradient.cs  Partan3.cs
Methods/MultiDimensionalSearch/: Bolzano.cs  CalculatedRatios.cs  CubicInterpolation.cs  Fibonacci2.cs  GaussSeidel.cs  GoldenNumbers.cs  GoldenSection1.cs  HookeJeeves.cs  Koshi.cs  MethodWithVariableMetric.cs  MethodСonjugateGradient.cs  MultiDimSearch.cs  NewtonGeneralizedMethod.cs  Partan3.cs  Powell.cs  Powell3.cs  Swenn.cs
Parametrs/: InputParams.cs  LimParams.cs  LimitingParams.cs  Matrix.cs  OutputParams.cs  Params.cs  Result.cs  Vector.cs
Parametrs/Flags/: LimitingFlags.cs
Parametrs/Vars/: Vector.cs
Views/: ChoiceOfDerivativeFormulaControl.Designer.cs  ChoiceOfDerivativeFormulaControl.cs  ChoiceOfTypeRunComposite.Designer.cs  ChoiceOfTypeRunComposite.cs  CompositeControl.Designer.cs  CompositeControl.cs  CompositeControl.resx  DataFunctionForm.cs  DataGridFunctions.Designer.cs  DataGridFunctions.cs  DataGridFunctions.resx  FormAddFunction.Designer.cs  FormAddFunction.cs  FormAddLimParams.Designer.cs  FormAddLimParams.cs  FormChoiceOfMethod.Designer.cs  FormChoiceOfMethod.cs  FormCreateMethod.Designer.cs  FormCreateMethod.cs  ListCompositeControls.Designer.cs  ListCompositeControls.cs  Logs.Designer.cs  Logs.cs  MainForm.Designer.cs  MainForm.cs
Views/Beta/: FormObj.Designer.cs  FormObj.cs
src/: Core.cpp  Core.h  library.cpp  library.h
src/Func/: Func.cpp  Func.h
src/Math/: Math.cpp  Math.h
src/Methods/: Method.cpp  Method.h
src/Parameters/: Params.cpp  Params.h  Vector.cpp  Vector.h
src/Parser/: MathParser.cpp  MathParser.h  Result.cpp  Result.h
src/String/: String.h  (+1 more)
(+39 files in other folders)
